<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Galaxy 3 Settings</string>

    <string name="category_screen_title">WM8994 Settings ( voodoo )</string>

    <!-- WM8994 Control Settings -->
    <string name="general_sound_title">Sound</string>
    <!--  Categories -->
    <string name="category_wm8994_internal_speaker">Internal Speaker Configuration</string>
    <string name="category_wm8994_signal_processing">Signal Processing</string>
    <string name="category_wm8994_headphone_amp">Headphone Amplifier</string>
    <string name="category_wm8994_codec_optimization">Codec Optimization</string>
    <string name="category_wm8994_dac_config">Digital/Analog Converter Settings</string>
    <string name="category_wm8994_analog_path">Analog Path Configuration</string>
    <string name="category_wm8994_mic_settings">Microphone Settings</string>
    <!--  Titles/Summaries -->
    <string name="wm8994_settings_title_head">Sound Settings</string>
    <string name="wm8994_settings_title_subhead">Sound Settings</string>
    <string name="wm8994_settings_summary_head">Advanced control of the WM8994 sound processor hardware</string>
    <string name="pref_wm8994_control_enable_title">Enable WM8994 Control</string>
    <string name="pref_wm8994_control_enable_summary">Enable advanced controls for the WM8994 sound processor hardware</string>
    <string name="pref_wm8994_speaker_tuning_title">Tune speaker for music</string>
    <string name="pref_wm8994_speaker_tuning_summary">Reconfigures the hardware EQ to get more bass and balanced sound</string>
    <string name="pref_wm8994_mono_downmix_title">Mono downmix</string>
    <string name="pref_wm8994_mono_downmix_summary">Downmix stereo sound to mono (for stereo outputs, such as headphones)</string>
    <string name="pref_wm8994_stereo_expansion_title">Stereo expansion</string>
    <string name="pref_wm8994_stereo_expansion_summary">"Expand" stereo sound via digital signal processing</string>
    <string name="pref_wm8994_expansion_gain_title">Stereo expansion gain</string>
    <string name="pref_wm8994_expansion_gain_summary">"Expand" stereo sound via digital signal processing</string>
    <string name="pref_wm8994_dac_direct_title">D/AC direct</string>
    <string name="pref_wm8994_dac_direct_summary">Access digital/analog converter directly, bypassing the channel mixer. Produces cleaner audio (lower signal-to-noise ratio)</string>
    <string name="pref_wm8994_dac_osr128_title">Hi-fi playback</string>
    <string name="pref_wm8994_dac_osr128_summary">Digital-to-analog converter 128x oversampling -- cleaner sound when playing music</string>
    <string name="pref_wm8994_adc_osr128_title">Hi-fi recording</string>
    <string name="pref_wm8994_adc_osr128_summary">Analog-to-digital converter 128x oversampling -- increases quality of recordings</string>
    <string name="pref_wm8994_fll_tuning_title">Tuned audio clock</string>
    <string name="pref_wm8994_fll_tuning_summary">Use tuned WM8994 audio clock source -- improves quality of sound</string>

    <string name="category_touchkey_title">Touch Keys</string>
    <string name="led_triggers_title_head">Screen-off LED Trigger</string>
    <string name="led_triggers_summary_head">Change how the buttons LEDs behave when screen is off</string>

    <string name="category_g3rom_title">About this ROM</string>
    <string name="about_credits_title_head">Credits</string>
    <string name="about_credits_summary_head">Show the credits and donators list</string>

    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <!-- Credits strings -->
    <string name="credits_title">View Credits</string>
    <string name="credits_dialog">Credits</string>
    <string name="credits_loading">Loading Credits ...\u2026</string>
    <string name="credits_error">Error loading Credits\u2026</string>
    <string name="credits_unknown">Unknown</string>
    <string name="credits_version">Version</string>
</resources>
