<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <!-- General settings -->
        <PreferenceCategory android:key="general_category"
                android:title="@string/general_sound_title">

                <CheckBoxPreference android:key="pref_wm8994_control_enable"
                        android:title="@string/pref_wm8994_control_enable_title"
                        android:summary="@string/pref_wm8994_control_enable_summary" />
        </PreferenceCategory>

        <!--  Internal speaker options -->
        <PreferenceCategory android:key="wm8994_internal_speaker_category"
                android:title="@string/category_wm8994_internal_speaker">

                <CheckBoxPreference android:key="pref_wm8994_speaker_tuning"
                        android:title="@string/pref_wm8994_speaker_tuning_title"
                        android:summary="@string/pref_wm8994_speaker_tuning_summary"
                        android:dependency="pref_wm8994_control_enable" />

    </PreferenceCategory>

    <!-- Signal Processing -->
    <PreferenceCategory android:key="wm8994_signal_processing_category"
        android:title="@string/category_wm8994_signal_processing">

                <CheckBoxPreference android:key="pref_wm8994_mono_downmix"
                        android:title="@string/pref_wm8994_mono_downmix_title"
                        android:summary="@string/pref_wm8994_mono_downmix_summary"
                        android:dependency="pref_wm8994_control_enable"
				android:defaultValue="0" />

            	<ListPreference
                	android:key="expansion_gain"
                	android:title="@string/pref_wm8994_expansion_gain_title"
                	android:summary="@string/pref_wm8994_expansion_gain_summary"
                        android:dependency="pref_wm8994_control_enable"
                	android:entries="@array/expansion_gain_entries"
                        	android:entryValues="@array/expansion_gain_entries_values"
                        	android:defaultValue="16" />

        </PreferenceCategory>

</PreferenceScreen>
